--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
     
-    fbq('init', 'YOUR_PIXEL_ID'); // Replace with your Pixel ID
-    fbq('track', 'Purchase'); // Replace with appropriate event, e.g., 'Lead', 'CompleteRegistration'
+    fbq('init', '529853453224384'); // Replace with your Pixel ID
+    fbq('track', 'lead'); // Replace with appropriate event, e.g., 'Lead', 'CompleteRegistration'
   </script>
   <noscript>
     <img height="1" width="1" style="display:none"
